k8s/configmap.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: weather-forecast
